tdf#96384: Add a new signal 'text-selection' to lokdocview

To help client know when the user has selected a non-null text.

Change-Id: Ie939612fc5f38e2e50e9ad9792e04e89ae918886